Fixed styling errors and misalignment

--- a/post-boxes.css
+++ b/post-boxes.css
@@ -59,6 +59,7 @@
 
     display: flex;
     column-gap: 0.5rem;
+    justify-content: space-around;
     align-items: center;
     
     cursor: pointer;
